@@ -4,28 +4,27 @@
     "Fernando Santagata"
   ],
   "build-depends" : [ ],
-  "depends" : [ "NativeHelpers::Blob" ],
+  "depends" : [ ],
   "description" : "An interface to libgsl, the Gnu Scientific Library.",
   "license" : "Artistic-2.0",
   "name" : "Math::Libgsl",
   "perl" : "6.c",
   "provides" : {
-    "Math::Libgsl" : "lib/Math/Libgsl.pm6",
-    "Math::Libgsl::Constants" : "lib/Math/Libgsl/Constants.pm6",
-    "Math::Libgsl::Elementary" : "lib/Math/Libgsl/Elementary.pm6",
-    "Math::Libgsl::Exception" : "lib/Math/Libgsl/Exception.pm6",
-    "Math::Libgsl::Function" : "lib/Math/Libgsl/Function.pm6",
-    "Math::Libgsl::Polynomial" : "lib/Math/Libgsl/Polynomial.pm6",
-    "Math::Libgsl::Raw::Complex" : "lib/Math/Libgsl/Raw/Complex.pm6",
-    "Math::Libgsl::Raw::Elementary" : "lib/Math/Libgsl/Raw/Elementary.pm6",
-    "Math::Libgsl::Raw::Function" : "lib/Math/Libgsl/Raw/Function.pm6",
-    "Math::Libgsl::Raw::Polynomial" : "lib/Math/Libgsl/Raw/Polynomial.pm6"
+    "Math::Libgsl::Constants" : "lib/Math/Libgsl/Constants.rakumod",
+    "Math::Libgsl::Elementary" : "lib/Math/Libgsl/Elementary.rakumod",
+    "Math::Libgsl::Exception" : "lib/Math/Libgsl/Exception.rakumod",
+    "Math::Libgsl::Function" : "lib/Math/Libgsl/Function.rakumod",
+    "Math::Libgsl::Polynomial" : "lib/Math/Libgsl/Polynomial.rakumod",
+    "Math::Libgsl::Raw::Complex" : "lib/Math/Libgsl/Raw/Complex.rakumod",
+    "Math::Libgsl::Raw::Elementary" : "lib/Math/Libgsl/Raw/Elementary.rakumod",
+    "Math::Libgsl::Raw::Function" : "lib/Math/Libgsl/Raw/Function.rakumod",
+    "Math::Libgsl::Raw::Polynomial" : "lib/Math/Libgsl/Raw/Polynomial.rakumod"
   },
   "resources" : [ ],
   "source-url" : "git://github.com/frithnanth/perl6-Math-Libgsl.git",
   "tags" : [
     "math",
-    "nativacall"
+    "nativecall"
   ],
   "test-depends" : [ ],
   "version" : "0.0.1"
