@@ -1,6 +1,7 @@
 Revision history for Math-Libgsl
 
 {{$NEXT}}
+    - Add Permutation & switch to new Raku file naming scheme
 
 0.0.1  2019-12-21T14:57:12+01:00
     - Initial version
